# CSE

./: .gitignore  README.md  package.json
client/: package-lock.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/(auth)/: layout.tsx
client/app/dashboard/: page.tsx
client/components/: FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Step.tsx  TopCreators.tsx
client/components/FAQ/: FAQItem.tsx
client/components/Footer/: FooterColumn.tsx
client/components/HowItWorks/: Content.tsx  Navigation.tsx
client/components/creator/: file-upload.tsx  step-indicator.tsx
client/components/trade/: OrderBook.tsx  PriceChart.tsx  SwapInterface.tsx
client/constants/: animationConfig.ts  faqData.ts  featuresData.ts  howItWorksData.ts  index.ts
client/hooks/: use-auth.ts  useScrollAnimation.ts
client/lib/: api.ts  ws-manager.ts
client/lib/validations/: auth.ts  creator.ts
client/providers/: TradesProvider.tsx  query-provider.tsx
client/store/: auth.ts
client/utils/: scrollUtils.ts
engine-service/: .dockerignore  .env.example  .env.production  Cargo.toml  Dockerfile  docker-compose.yml  docker-init.sql  markets.json
engine-service/core-engine/: Cargo.toml
engine-service/core-engine/src/: main.rs  order.rs  user.rs
engine-service/core-engine/src/engine/: db.rs  ws_stream.rs
engine-service/core-engine/src/engine-components/: engine.rs
engine-service/core-engine/src/types/: db.rs  engine.rs
engine-service/crates/common_utils/: Cargo.toml
engine-service/crates/db-processor/: Cargo.toml  README.md
engine-service/crates/db-processor/src/: lib.rs  main.rs  query.rs  seed.rs  types.rs
engine-service/crates/engine/: Cargo.toml
engine-service/crates/engine/src/: main.rs  order.rs  user.rs  user_service.rs
engine-service/crates/engine/src/engine/: db.rs  engine.rs  error.rs  mod.rs  orderbook.rs  ws_stream.rs
engine-service/crates/engine/src/types/: db.rs  engine.rs  mod.rs  ws_stream.rs
engine-service/crates/market-simulator/src/: main.rs
engine-service/crates/redis/: Cargo.toml
engine-service/crates/redis/src/: lib.rs
engine-service/crates/router/: Cargo.toml
engine-service/crates/router/src/: config.rs  main.rs
engine-service/crates/router/src/routes/: depth.rs  klines.rs  mod.rs  order.rs  tickers.rs  trade.rs  user.rs
engine-service/crates/router/src/types/: app.rs  routes.rs
engine-service/crates/sqlx_postgres/: Cargo.toml  README.md
engine-service/crates/sqlx_postgres/migrations/: 20240929080454_trades.down.sql  20240929080454_trades.up.sql
engine-service/crates/sqlx_postgres/src/: lib.rs
engine-service/crates/ws-stream/: Cargo.toml
engine-service/crates/ws-stream/src/: main.rs  types.rs  user.rs  ws_manager.rs
engine-service/docker/: .env.example  Dockerfile.db-processor  Dockerfile.engine  Dockerfile.router  Dockerfile.ws-stream  docker-compose-core.yml  docker-compose.yml  docker.sh  setup.md
engine-service/market-simulator/: Cargo.toml
engine-service/redis/: Cargo.toml
engine-service/router/src/: main.rs
engine-service/router/src/routes/: depth.rs  klines.rs  order.rs  tickers.rs  trade.rs
engine-service/router/src/types/: routes.rs
engine-service/scripts/: setup-app.sh
engine-service/sqlx_postgres/src/: query.rs
engine-service/ws-stream/src/: types.rs  ws_manager.rs
indexer-service/: .env.example  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
indexer-service/prisma/: schema.prisma
indexer-service/src/: config.rs  config.ts  db.rs  db.ts  main.rs  main.ts
indexer-service/src/chains/: solana.rs
indexer-service/src/configs/: configs.example.yml
indexer-service/src/enums/: chain.enum.ts  currencies.enum.ts  index.enum.ts  txStatus.enum.ts  txType.enum.ts
indexer-service/src/helpers/: eth.confirmTx.helper.ts  solana.confirmTx.helper.ts
indexer-service/src/indexer/bitcoin/: client.ts
indexer-service/src/indexer/ethereum/: client.ts
indexer-service/src/indexer/solana/: client.ts
scripts/: package-lock.json  package.json  simulate-realistic-trading.js  simulate-trading.js
server/: pnpm-lock.yaml  pnpm-workspace.yaml
server/services/engine-service/: Cargo.toml  README-Docker.md
server/services/engine-service/database/: .env.example  Cargo.toml
server/services/engine-service/database/migrations/: 20250910114925_init.up.sql
server/services/engine-service/router/: Cargo.toml
server/services/engine-service/router/src/: config.rs  main.rs
server/services/engine-service/router/src/routes/: depth.rs  klines.rs  mod.rs  order.rs  tickers.rs  trade.rs  user.rs
server/services/engine-service/router/src/types/: app.rs  routes.rs
server/services/user-service/: .gitignore  nodemon.json  package.json  tsconfig.json
services/engine-service/: Cargo.toml
services/user-service/: .env.example  nodemon.json  package-lock.json  package.json  tsconfig.json
sweeper-service/: .env.example  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
sweeper-service/prisma/: schema.prisma
sweeper-service/src/: config.ts  db.ts
user-service/: .env.example  .gitignore  cookies.txt  create-test-user.js  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
user-service/prisma/: schema.prisma
user-service/scripts/: create-admin.js
user-service/src/: app.ts  db.ts  index.ts
web-app/: BACKEND_INTEGRATION.md  README.md  cookies.txt  package-lock.json  package.json
web-app/app/market/: page.tsx
web-app/components/: Stats.tsx  TopCreators.tsx
web-app/constants/: footerData.ts
web-app/hooks/: use-wallet.ts  useScrollAnimation.ts
web-app/lib/: SignalingManager.ts  api.ts  exchange-api.ts  httpClient.ts  order-api.ts
web-app/store/: creator-onboarding.ts
web-app/types/: howItWorks.ts
(+135 files in other folders)
