[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
actix-cors = "0.6"
actix-web = "4"
async-trait = "0.1.83"
chrono = "0.4.38"
confik = "0.11"
dotenvy = "0.15"
env_logger = "0.10.0"
fred = { version = "9.2.1", features = ["subscriber-client"] }
futures-util = "0.3.30"
rand = "0.8.5"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "bigdecimal", "rust_decimal", "time"] }
tokio = { version = "1.10.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
