[package]
name = "indexer-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }          # Async runtime
dotenvy = "0.15"                                       # Load .env
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }  # Async DB
tracing = "0.1"                                        # Logging
tracing-subscriber = "0.3"
anyhow = "1.0"                                         # Error handling

# Blockchain clients
solana-client = "2"                                    # Solana RPC
solana-sdk = "2"
solana-transaction-status = "2"

ethers = { version = "2", features = ["ws", "rustls"] }  # Ethereum / EVM
bitcoincore-rpc = "0.18"                                # Bitcoin RPC
serde = { version = "1.0", features = ["derive"] }      # JSON parsing
serde_json = "1.0"
