[package]
name = "indexer-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde = "=1.0.219"
serde_derive = "=1.0.219"
serde_json = "1.0"
dotenv = "0.15"
solana-client = "2.1"
solana-sdk = "2.1"
solana-program = "2.1"
solana-transaction-status = "2.1"
anyhow = "1.0"