[package]
name = "market-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
fred = { version = "10.1.0", features = ["subscriber-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
