[package]
name = "db-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
fred.workspace = true
rand.workspace = true
reqwest = { version = "0.11", features = ["json"] }
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

redis = { path = "../redis" }
sqlx_postgres = { path = "../sqlx_postgres" }

