[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
fred.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

redis = { path = "../redis" }
db-processor = { path = "../db-processor" }
sqlx_postgres = { path = "../sqlx_postgres" }