[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
confik.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
uuid.workspace = true

common_utils = { path = "../common_utils" }
redis = { path = "../redis" }
sqlx_postgres = { path = "../sqlx_postgres" }
db-processor = { path = "../db-processor" }
