[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
